# simple_shell

./: #env.c#  #readline.c#  .#readline.c  .gitignore  AUTHORS  CMakeLists.txt  PATH.c  README.md  builtin.c  builtin_&_environ.c  custom_functions.c  custome_function2.c  env.c  env2.c  environ.c  errors1.c  execute.c  getLine.c  history.c  hsh  lists.c  main.c  main.h  mystd_f.h  pf_check_number.c  pf_getNumberLength.c  pf_print_char.c  pf_print_string.c  pf_printf.c  printf.h  readline.c  shell.h  shell_loop.c  std_fun.c  std_fun2.c  std_fun3.c  tokenizer.c  utils.c  utils2.c  vars.c
